--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 <footer class="text-muted py-5">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Back to top</a>
+
     </p>
-    <p class="mb-1">ThatOneGame &copy; Jeremy Brigham.</p>
-    <p class="mb-0">Questions, Concerns, or advice (both warranted and unwarranted?) Send it to thatgoatdev@gmail.com...</p>
+    <p class="text-center">ThatOneGame &copy; Jeremy Brigham.</p>
+    <p class="text-center">Questions, Concerns, or Advice (both warranted and unwarranted?) Send it to thatgoatdev@gmail.com...</p>
   </div>
 </footer>
 
