--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1 class="fw-light">ThatOneGame</h1>
         <p class="lead text-muted">Friends, Food, Fighting???</p>
         <p>
-          <a href="ThatOneGame.zip" class="btn btn-primary my-2">Play the DEMO! (Or don't. I don't care. Or do I? <br> I lied! I really do care! <br> PLEASE DOWNLOAD IT!)</a>
+          <a href="ThatOneGame.zip" class="btn btn-primary my-2">Play the DEMO! (Or don't. I don't care. Or do I? <br> I lied! I do care! <br> PLEASE DOWNLOAD IT!)</a>
 
           <!-- <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
         </p>
@@ -164,7 +164,7 @@
             
 
             <div class="card-body">
-              <p class="card-text">Watch them laugh. Watch them cry. Watch them be human (kinda).</p>
+              <p class="card-text">Watch them laugh. Watch them cry. Watch them be people (even if they're weird sometimes).</p>
               <div class="d-flex justify-content-between align-items-center">
 
 
@@ -178,7 +178,7 @@
             
 
             <div class="card-body">
-              <p class="card-text">Sometimes people will try to fight you... (or maybe you will try to fight them).</p>
+              <p class="card-text">Sometimes people will try to fight you... (or you will fight them).</p>
               <div class="d-flex justify-content-between align-items-center">
 
 
