--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
       </div>
     </div>
   </section>
-
+  <script>
+    document.querySelector("html").addEventListener("click", function () {
+  alert("Ouch! Stop poking me!");
+});
+  </script>
   <div class="album py-5 bg-light">
     <div class="container">
 
