--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
       </div>
     </div>
   </section>
-  <script>
-    document.querySelector("html").addEventListener("click", function () {
+  <script type='text/javascript'>
+  document.querySelector("html").addEventListener("click", function () {
   alert("Ouch! Stop poking me!");
 });
   </script>
