--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
   <script type='text/javascript'>
   document.querySelector("html").addEventListener("click", function () {
   alert("Ouch! Stop poking me!");
+  document.write("Did this delete everything?")
 });
   </script>
   <div class="album py-5 bg-light">
